--- a/TrainReservation/TrainReservation/TrainReservation.csproj
+++ b/TrainReservation/TrainReservation/TrainReservation.csproj
@@ -52,6 +52,9 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReserveRequest.cs" />
+    <Compile Include="Seat.cs" />
+    <Compile Include="Train.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
